# cpp-project-template

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  codecov.yml
.github/workflows/: ci.yml
app/: CMakeLists.txt  your-project_app.cpp
cmake/: your-projectConfig.cmake.in
doc/: CMakeLists.txt  conf.py  index.rst
include/adder/: adder.hpp
include/your-project/: your-project.hpp
src/: CMakeLists.txt  your-project.cpp
tests/: CMakeLists.txt  your-project_t.cpp
